Unify historical data loading via HistoricalDataLoader.
Story 12.2: millis in download script, wire RunBacktest and BatchStrategyRunner,
add BarStore/HistoricalDataLoader tests.

Co-authored-by: Cursor <cursoragent@cursor.com>